--- a/Tanks-protocol/pom.xml
+++ b/Tanks-protocol/pom.xml
@@ -20,6 +20,11 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.kpfu.itis</groupId>
+            <artifactId>Tanks-server</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
