--- a/Tanks-server/pom.xml
+++ b/Tanks-server/pom.xml
@@ -13,4 +13,12 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.kpfu.itis</groupId>
+            <artifactId>Tanks-protocol</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
