--- a/Tanks-server/pom.xml
+++ b/Tanks-server/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>Tanks-protocol</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
