--- a/Tanks-client/core/pom.xml
+++ b/Tanks-client/core/pom.xml
@@ -14,18 +14,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ru.kpfu.itis</groupId>
+			<artifactId>net</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.badlogicgames.gdx</groupId>
 			<artifactId>gdx</artifactId>
 		</dependency>
 	</dependencies>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>../assets</directory>
-			</resource>
-		</resources>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
