--- a/Tanks-client/desktop/pom.xml
+++ b/Tanks-client/desktop/pom.xml
@@ -19,6 +19,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>ru.kpfu.itis</groupId>
+			<artifactId>net</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ru.kpfu.itis</groupId>
 			<artifactId>core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -41,6 +47,12 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>../assets</directory>
+			</resource>
+		</resources>
+
 		<plugins>
 			<!-- this run the game when you invoke: mvn integration-test -Pdesktop -->
 			<plugin>
