--- a/Tanks-client/net/pom.xml
+++ b/Tanks-client/net/pom.xml
@@ -8,6 +8,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.kpfu.itis</groupId>
+            <artifactId>Tanks-protocol</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <artifactId>net</artifactId>
     <name>Game Network</name>
 </project>
