rollback last commit

--- a/Tanks-client/desktop/pom.xml
+++ b/Tanks-client/desktop/pom.xml
@@ -63,7 +63,9 @@
                     <execution>
                         <id>unpacknatives</id>
                         <phase>pre-integration-test</phase>
-                        <goals><goal>copy</goal></goals>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
